fix: some layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,25 @@
 @import "tailwindcss";
 
+@theme {
+	--font-sans: "Inter", sans-serif;
+	--font-barlow: "Barlow Condensed", sans-serif;
+
+	/* --animate-infinite-scroll: scroll 5s linear infinite;
+
+	@keyframes scroll {
+		0% {
+			transform: translateY(0);
+		}
+		50% {
+			transform: translateY(-90%);
+		}
+		100% {
+			transform: translateY(0);
+		}
+
+	} */
+}
+
 @layer utilities {
 	/* Hide scrollbar for Chrome, Safari and Opera */
 	.no-scrollbar::-webkit-scrollbar {
